2007-06-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/revolver_cit.c (igraph_revolver_d, igraph_revolver_mes_d)
	(igraph_revolver_ad, igraph_revolver_mes_ad)
	(igraph_revolver_ade, igraph_revolver_mes_ade)
	(igraph_revolver_e, igraph_revolver_mes_e)
	(igraph_revolver_de, igraph_revolver_mes_de)
	(igraph_revolver_l, igraph_revolver_mes_l)
	(igraph_revolver_dl, igraph_revolver_mes_dl)
	(igraph_revolver_el, igraph_revolver_mes_el)
	(igraph_revolver_r, igraph_revolver_mes_r)
	(igraph_revolver_ar, igraph_revolver_mes_ar)
	(igraph_revolver_di, igraph_revolver_mes_di)
	(igraph_revolver_adi, igraph_revolver_mes_adi)
	(igraph_revolver_il, igraph_revolver_mes_il)
	(igraph_revolver_ir, igraph_revolver_mes_ir)
	(igraph_revolver_air, igraph_revolver_mes_air) : logmax argument added

2007-06-03  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/revolver_cit.c (igraph_revolver_error2_d, igraph_revolver_error2_ad)
	(igraph_revolver_error2_ade, igraph_revolver_error2_e)
	(igraph_revolver_error2_de, igraph_revolver_error2_l)
	(igraph_revolver_error2_dl, igraph_revolver_error2_el)
	(igraph_revolver_error2_r, igraph_revolver_error2_ar)
	(igraph_revolver_error2_di, igraph_revolver_error2_adi)
	(igraph_revolver_error2_il, igraph_revolver_error2_ir)
	(igraph_revolver_error2_air) : added

2007-05-22  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/games.c (igraph_recent_degree_game) : error handling bug corrected

2007-05-17  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/type_indexededgelist.c (igraph_edges) : added

2007-05-16  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/foreign.c (igraph_write_graph_gml) : added
	* examples/simple/gml.c : update to test write_graph_gml as well

	* src/igraph.h (IGRAPH_VERSION_STRING) : added

	* src/foreign-gml-parser.y
	* src/foreign.c (igraph_read_graph_gml) : print better error message

	* src/foreign-gml-parser.y 
	* src/foreign.c (igraph_read_graph_gml) : some memory leaks corrected

2007-05-15  Gabor Csardi  <csardi@rmki.kfki.hu>
