@@ -14,6 +14,7 @@
 <!-- doxrox-include igraph_layout_fruchterman_reingold -->
 <!-- doxrox-include igraph_layout_kamada_kawai -->
 <!-- doxrox-include igraph_layout_reingold_tilford -->
+<!-- doxrox-include igraph_layout_reingold_tilford_circular -->
 <!-- doxrox-include igraph_layout_grid_fruchterman_reingold -->
 <!-- doxrox-include igraph_layout_lgl -->
 </section>
