@@ -1,5 +1,7 @@
 2007-06-06  Gabor Csardi  <csardi@rmki.kfki.hu>
 
+	* src/layout.c (igraph_layout_reingold_tilford_circular) : added
+
 	* src/revolver_cit.c (igraph_revolver_d, igraph_revolver_mes_d)
 	(igraph_revolver_ad, igraph_revolver_mes_ad)
 	(igraph_revolver_ade, igraph_revolver_mes_ade)
